@@ -14,6 +14,8 @@ This NEWS file summarises the main changes.
 
 NEW FEATURES
 
+  o  Can call setkey with arbitrary column names now, thanks to Corone from SO for reporting: http://stackoverflow.com/a/19166273/817778
+
   o  Fixed bug #4927, thanks to Ricardo Saporta for reporting.
 
   o  FR #4677 has been addressed - eval will now be evaluated anywhere in a j-expression as long as
